# vpn-manager

./: .activate  .gitignore  LICENSE  README.md  cidr4_merger.py  make_configs.py  pyproject.toml
archive/: _test_cidr4_merger.py  cidr4_merger.py  find_subnets_example.md  insurance_functions_example.md
tests/: cidr4_data_for_tests.py  test_app.py  test_cidr4_merger.py
tests/cidr4_merge/: test_cidr4_merger.py  test_solutions.py  test_util.py
vpn_manager/: __init__.py  __main__.py  peers.py
vpn_manager/cidr4_merge/: README.md  __init__.py  cidr4_merger.py  fast.py  precise.py  util.py
