[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vpn_manager"]

[project]
name = "vpn-manager"
version = "2024.12.0a"
requires-python = ">=3.8"
dependencies = ["click>=8.1"]
authors = [
    {name = "Fedor Lyanguzov"},
]
license = {file = "LICENSE"}
readme = "README.md"
description = "Manage WireGuard VPN peers (both server and clients)"

[project.optional-dependencies]
test = ["pytest"]
lint = [
  "black",
  "flake8"
]

[project.scripts]
example = "vpn_manager.__main__:main"
